--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,70 +1,88 @@
-.gallery {
+.Galeria-main{
+  text-align: center;
+}
+
+.Galeria-h1 {
+  font-size: 2.5rem;
+  font-weight: 600;
+  color: #855a0ae1;
+  margin: 0;
+  padding: 1.25rem 0;
+}
+
+.Galeria {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  gap: 15px;
-  padding: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(12.5rem, 1fr));
+  gap: .9375rem;
+  padding: 1.25rem;
   justify-items: center;
   background-color: #f8f9fa;
 }
 
-.gallery-item {
+.Galeria-container {
   width: 100%;
-  height: 200px;
+  height:16rem;
   overflow: hidden;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  border-radius: .625rem;
+  box-shadow: 0 .25rem .5rem rgba(0, 0, 0, 0.2);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-.gallery-item:hover {
+.Galeria-container:hover {
   transform: scale(1.05);
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 .375rem .75rem rgba(0, 0, 0, 0.3);
 }
 
-.gallery-item img {
+.Galeria-img {
   width: 100%;
-  height: 100%;
+  max-height: 9.5rem;
   object-fit: cover;
-  max-height: 100%;
+  border-radius: .625rem .625rem 0 0;
 }
 
-.gallery-info {
+.Galeria-div {
   text-align: center;
-  padding: 10px;
+  padding: .625rem;
   background-color: rgba(255, 255, 255, 0.7);
-  border-radius: 5px;
+  border-radius: .3125rem;
 }
 
-.gallery-title {
+.Galeria-titulo {
   font-size: 1.1rem;
   font-weight: 600;
-  color: #333;
+  color: #855a0ae1;
   margin: 0;
-  padding: 5px 0;
+  padding: .3125rem 0;
 }
 
-.pagination-info {
+.Galeria-botones {
   text-align: center;
-  margin: 20px 0;
+  margin: 1.25rem 0;
 }
 
-.pagination-info button {
-  margin: 0 5px;
-  padding: 10px 15px;
-  font-size: 1rem;
-  background-color: #007bff;
+.Galeria-botones-bajos {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.Galeria-btn {
+  margin: 0 .3125rem;
+  padding: .625rem .9375rem;
+  font-size: 16px;
+  background-color: #855a0ae1;
   color: #fff;
   border: none;
-  border-radius: 5px;
+  border-radius: .3125rem;
   cursor: pointer;
   transition: background-color 0.3s;
 }
 
-.pagination-info button:hover {
-  background-color: #0056b3;
+.Galeria-btn:hover {
+  background-color: #855a0ae1;
 }
 
-.pagination-info button:disabled {
-  background-color: #6c757d;
+.Galeria-btn:disabled {
+  background-color: #855a0a77;
   cursor: not-allowed;
 }
